# napari-manual-tracking

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_manual_tracking/: __init__.py  _manual_tracker.py  _plot_tracking_results.py  _trackpy_detection.py  _trackpy_linking.py  napari.yaml
src/napari_manual_tracking/utilities/: _checkboxWidget.py  _measure_props.py  _plot_widget.py  _save_plot_figure.py  _table_widget.py  _voxel_dimension_widget.py  napari_multiple_view_widget.py
