[metadata]
name = napari-manual-tracking
version = attr: napari_manual_tracking.__version__
description = A plugin for using trackpy within napari to detect and link objects, and manually correct the tracks and plot results.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnniekStok/napari-manual-tracking
author = Anniek Stokkermans
author_email = anniek.stokkermans@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/AnniekStok/napari-manual-tracking/issues
    Documentation = https://github.com/AnniekStok/napari-manual-tracking#README.md
    Source Code = https://github.com/AnniekStok/napari-manual-tracking
    User Support = https://github.com/AnniekStok/napari-manual-tracking/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-manual-tracking = napari_manual_tracking:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
